ui: fix map not showing up in chrome
- make use of flex for determining height of map and heatmap
- remove unnecessary width rule for heatmap

Note: map width rule seems to be obsolete too, keeping for now because
I'm not sure if all browsers handle putting google maps inside a
container without both dimensions specified well

--- a/app/assets/stylesheets/modules/map.css.scss
+++ b/app/assets/stylesheets/modules/map.css.scss
@@ -11,17 +11,16 @@
 }
 
 .map-container {
-  min-height: calc((100vh - #{$heatmap-height}) - #{$nav-height});
   position: relative;
+  flex: 1 1 100%;
 }
 
 .heatmap {
-  height: $heatmap-height;
   background: white;
-  width: 100vw;
+  flex: 1 0 $heatmap-height;
 }
 
 .map {
-  width: calc(100vw - #{$filters-width});
   height: 100%;
+  width: calc(100vw - #{$filters-width});
 }
